--- a/paginas/hacenostupedido.html
+++ b/paginas/hacenostupedido.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/pruebacss.css">
+    <link rel="stylesheet" href="../css/pruebacss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-    <title>sushi di mare</title>
+    <title>PEDIDOS</title>
 </head>
 <body class="body">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">SUSHI DI MARE</a>
+      <a class="navbar-brand" href="../index.html">SUSHI DI MARE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,7 @@
             <a class="nav-link" href="#">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="paginas/tienda.html">PEDIDOS</a>
+            <a class="nav-link" href="../paginas/tienda.html">PEDIDOS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">UBICACION</a>
@@ -36,15 +36,15 @@
       </div>
     </div>
   </nav>
-      <main class="main">
+      <main class="main1">
         <div class="socialbar">
             <a href="" class="icon icon-facebook2" target="_blank"></a>
             <a href="" class="icon icon-instagram" target="_blank"></a>
             <a href="" class="icon icon-whatsapp" target="_blank"></a>
             <a href="" class="icon icon-twitter" target="_blank"></a>
         </div>
-          <h1 class="h1">SUSHI DI MARE</h1>
-          <p class="p">Tu sushi te esta esperando</p>
+        <h1 class="h1">MUCHAS GRACIAS!</h1>
+        <p class="p">QUE LO DISFRUTES Y NOS VEMOS PRONTO</p>
       </main>
       <footer class="footer">
         <div>
@@ -58,5 +58,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
