--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </nav>
-      <main class="main">
+      <main class="main1">
         <div class="socialbar">
             <a href="" class="icon icon-facebook2" target="_blank"></a>
             <a href="" class="icon icon-instagram" target="_blank"></a>
@@ -58,5 +58,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
