--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="paginas/tienda.html">PEDIDOS</a>
+            <a class="nav-link" href="paginas/hacenostupedido.html">PEDIDOS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="paginas/carrito.html">Carrito</a>
@@ -63,9 +63,6 @@
             <p class="f1">Todos los derechos reservados</p>
         </div>
     </footer>
-    <script src="js/stock.js"></script>
-    <script src="js/crearCards.js"></script>
-    <script src="js/pushearCarrito.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
