--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="#">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../paginas/tienda.html">PEDIDOS</a>
+                <a class="nav-link" href="../paginas/hacenostupedido.html">PEDIDOS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="carrito.html">Carrito</a>
