--- a/paginas/hacenostupedido.html
+++ b/paginas/hacenostupedido.html
@@ -4,38 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/pruebacss.css">
+    <meta name="description" content="Piezas de sushi al mejor precio.">
+    <meta name="keywords" content="sushi, piezas de sushi, salmon, comida,gohan mejor precio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/pruebacss.css">
 </head>
     <title>PEDIDOS</title>
 </head>
 <body class="body">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">SUSHI DI MARE</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">NOSOTROS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../paginas/tienda.html">PEDIDOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">UBICACION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CONTACTO</a>
-          </li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">SUSHI DI MARE</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/hacenostupedido.html">PEDIDOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="carrito.html">Carrito</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="registro.html">Registrate</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Inicia sesion</a>
+              </li>
+                </ul>
+              </li>
             </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+          </div>
+        </div>
+      </nav>
       <main class="main1">
         <div class="socialbar">
             <a href="" class="icon icon-facebook2" target="_blank"></a>
@@ -43,9 +49,17 @@
             <a href="" class="icon icon-whatsapp" target="_blank"></a>
             <a href="" class="icon icon-twitter" target="_blank"></a>
         </div>
-        <h1 class="h1">MUCHAS GRACIAS!</h1>
-        <p class="p">QUE LO DISFRUTES Y NOS VEMOS PRONTO</p>
+            <!-- Productos con js -->
+
+    <h2>Nuestros productos</h2>
+    
+    <section class="grid__cards">
+
+      <div class="caja__cards" id="padreCards">
+
+      </div>
       </main>
+      
       <footer class="footer">
         <div>
             <p class="f1">Sushi di Mare</p>
@@ -57,7 +71,9 @@
             <p class="f1">Todos los derechos reservados</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../app.js"></script>
+    <script src="../js/stock.js"></script>
+    <script src="../js/crearCards.js"></script>
+    <script src="../js/pushearCarrito.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
