--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/pruebacss.css">
 </head>
-    <title>PEDIDOS</title>
+    <title>Carrito</title>
 </head>
 <body class="body">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -28,13 +28,13 @@
                 <a class="nav-link" href="../paginas/hacenostupedido.html">PEDIDOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="carrito.html">Carrito</a>
+                <a class="nav-link" href="../paginas/carrito.html">Carrito</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrate</a>
+                <a class="nav-link" href="../paginas/registro.html">Registrate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Inicia sesion</a>
+                <a class="nav-link" href="../paginas/login.html">Inicia sesion</a>
               </li>
                 </ul>
               </li>
